--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,16 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .container {
@@ -19,4 +16,18 @@ code {
 
 .table-title {
   margin-bottom: 1rem;
+}
+
+.alert {
+  position: absolute;
+  z-index: 10;
+}
+
+.alert-top-right {
+  right: 1em;
+}
+
+.alert-bottom-right {
+  right: 1em;
+  bottom: 1em;
 }
